fixes social icon spacing in footer

--- a/styles/pages/landing.scss
+++ b/styles/pages/landing.scss
@@ -1341,10 +1341,7 @@ body * {
 		height: 100%;
 		width: 50%;
 	}
-	.footer__menu__item {
-		height: 7em;
-		width: 7em;
-	}
+	.footer__menu__item,
 	.footer__menu__item__link,
 	.footer__menu__item__link__image {
 		height: 6em;
